se realizan adiciones al back
